--- a/style.css
+++ b/style.css
@@ -72,3 +72,28 @@ body {
     color: white;
     font-size: 24px
 }
+
+.title {
+    color: white;
+    font-size: 45px;
+}
+
+.back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    margin: 10px;
+    color: white;
+    font-size: 24px;
+    background-color: #555;
+    border-radius: 100%;
+    border: 5px solid #888;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+}
