--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+*:focus {
+    outline: none;
+}
+
 body {
     background-color: #333;
     display: flex;
@@ -23,7 +27,8 @@ body {
     gap: 15px
 }
 
-.roles button {
+.roles button,
+input {
     font-size: 40px;
     padding: 20px;
     border-radius: 15px;
@@ -32,6 +37,11 @@ body {
     color: white;
     cursor: pointer;
     transition: 500ms;
+}
+
+input {
+    font-size: 30px;
+    padding: 5px;
 }
 
 .button {
